--- a/src/index.css
+++ b/src/index.css
@@ -80,8 +80,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: var(--clr-white);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -139,6 +139,7 @@ p {
   margin: 0rem auto;
   transition: var(--transition);
 }
+
 .form:hover {
   box-shadow: var(--shadow-4);
 }
@@ -179,6 +180,18 @@ p {
   color: var(--red-dark);
   letter-spacing: var(--letterSpacing);
   text-transform: capitalize;
+}
+.stateField {
+  width: 35%;
+  display: block;
+  margin-right: 1.5rem;
+  float: left;
+}
+.zipcodeField {
+  width: 35%;
+  display: block;
+  margin-right: 0.5rem;
+  float: left;
 }
 /* alert */
 @media screen and (min-width: 800px) {
